[package]
name = "begonia-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
env_logger = "0.11"
hickory-resolver = "0.24"
httparse = "1"
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_32"] }
kube = { version = "1", features = ["client"] }
lazy_static = "1"
log = "0.4"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[profile.release]
lto = true
